Fix custom icon widths on mobile

--- a/src/components/Logo.module.scss
+++ b/src/components/Logo.module.scss
@@ -8,7 +8,7 @@
   cursor: default;
 
   &__icon {
-    --icon-stroke-width: 3;
+    --icon-stroke-width: 3px;
     margin-right: calc(var(--logo-size) / 6);
   }
 }
